--- a/src/corazones_torcidos_frontend/index.html
+++ b/src/corazones_torcidos_frontend/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width" />
   <title>IC Hello Starter</title>
-  <base href="/" />
   <link rel="icon" href="/favicon.ico" />
+  <link rel="stylesheet" href="/src/index.scss" />
 </head>
 
 <body>
